<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.mine.UserInfoFragment">

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/userInfo_title"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="80dp"
        android:text="@string/LogoutBtn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="0dp"
        android:layout_height="313dp"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:stretchColumns="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.32">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/UserInfoTableNameTitle"
                android:layout_width="103dp"
                android:layout_height="match_parent"
                android:minWidth="60dp"
                android:text="@string/userInfo_name"
                android:textColor="@color/purple_500" />

            <TextView
                android:id="@+id/UserInfoTableName"
                android:layout_width="135dp"
                android:layout_height="match_parent"
                android:textColor="@color/purple_200" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/UserInfoTableEmailTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/userInfo_email"
                android:textColor="@color/purple_500" />

            <TextView
                android:id="@+id/UserInfoTableEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/purple_200" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/UserInfoTablePhoneTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/userInfo_phone"
                android:textColor="@color/purple_500" />

            <TextView
                android:id="@+id/UserInfoTablePhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/purple_200" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/UserInfoTableOrganizationTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/userInfo_organization"
                android:textColor="@color/purple_500" />

            <TextView
                android:id="@+id/UserInfoTableOrganization"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/purple_200" />
        </TableRow>

    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>